# NB-Python-BE

./: .env  README.md  pyproject.toml  render.yaml  requirement.txt  requirements.txt  vercel.json
api/: route.py
app/: config.py  db.py  deps.py  main.py  security.py
app/models/: __init__.py  cart.py  customer.py  order.py  product.py  review.py  wishlist.py
app/routers/: admin_products.py  admin_stats.py  cart.py  checkout.py  orders.py  products.py  reviews.py  uploads.py  wishlist.py
app/schemas/: __init__.py  cart.py  common.py  customer.py  order.py  product.py  review.py  stats.py  wishlist.py
app/utils/: cloudinary.py  etag.py  ids.py  jwt.py  pagination.py
